@@ -697,6 +697,9 @@ notinorig;texmf-dist/tex4ht/bin/tex4ht.jar;;
 # do not include pax.jar in orig.tar, it is built
 notinorig;texmf-dist/scripts/pax/pax.jar
 #
+# Blacklist parts of the pax lib, rather link these files
+# from the appropriate Debian packages.
+blacklist;dir;texmf-dist/source/latex/pax/lib;*
 #
 include-config;cfg.d/info-man-handling.cfg
 include-config;cfg.d/debian-replacement.cfg
